src/app/pages/interest/interest.scss
@import 'pattern-library/core/pattern-library/headers';
@import 'pattern-library/core/pattern-library/headers';

.interest-form {
    .top-of-form {
        padding-top: inherit;
    }

    .text-content {
        @extend %text-content;
    }

    .subhead {
        padding-bottom: 2rem;
    }

    [data-id="selectedRole"] {
        display: flex;
        margin: auto;
        padding: 4rem 0;
        width: 47rem;

        > label {
            flex-basis: 100%;
        }
    }

    .grouping {
        align-items: flex-start;
        width: 47rem;
    }

    h2 {
        @include set-font(h4);

        margin: 0;
    }

    .flexrow {
        display: flex;
        margin-top: 4rem;
    }

    .form-checkboxgroup,
    .form-input > .control-group {
        margin-bottom: 3.5rem;
        margin-top: $normal-margin;
    }

    button {
        @extend %button;

        &.primary {
            @extend %primary;
        }

        &.secondary {
            @extend %secondary;
        }
    }

    .hint {
        font-style: italic;
    }

    .form-checkboxgroup > label + :not(label),
    .form-radiogroup > label + :not(label) {
        margin-top: $normal-margin;
    }

    [data-id="form"] {
        display: block;
        min-height: 20rem;
    }
}

